spacing issue

--- a/src/App.css
+++ b/src/App.css
@@ -56,4 +56,5 @@
 .ql-toolbar.ql-snow + .ql-container.ql-snow {
   min-height: 150px !important;
   border-top: 1px solid #ccc !important;
+  padding-bottom: 20px !important;
 }
